# ssrl

./: .gitignore  README.md
ssrl/: README.md  envc.yml  environment.yml  setup.py
ssrl/brax/: evaluate.py  math.py
ssrl/brax/envs/: __init__.py  ant2.py  base.py  go1_go_fast.py  hopper2.py  walker2d2.py
ssrl/brax/envs/wrappers/: training.py
ssrl/brax/generalized/: base.py  constraint.py  integrator.py  pipeline.py
ssrl/brax/io/: mjcf.py  rendering.py
ssrl/brax/robots/go1/: gait.py  networks.py  utils.py
ssrl/brax/robots/go1/xml/: go1_approx.xml
ssrl/brax/training/: distribution.py
ssrl/brax/training/agents/apg/: train.py
ssrl/brax/training/agents/ars/: train.py
ssrl/brax/training/agents/es/: train.py
ssrl/brax/training/agents/pimbpo/: __init__.py
ssrl/brax/training/agents/ppo/: losses.py  networks.py  train.py  train_no_pmap.py
ssrl/brax/training/agents/sac/: train.py
ssrl/brax/training/agents/sac2/: base.py  networks.py  test.py  train.py  train_test.py
ssrl/brax/training/agents/ssrl/: base.py  losses.py  networks.py  train.py  train_test.py
ssrl/scripts/: go1_model_rollout.py  go1_plot_torque_validate.py  go1_render.py  go1_torque_validate.py  go1_train.py  rl_benchmarks.py
ssrl/scripts/configs/: go1.yaml  rl_benchmarks.yaml
ssrl_hardware/: .gitignore  README.md
ssrl_hardware/ssrl_ros_go1/: CMakeLists.txt  package.xml  setup.py
ssrl_hardware/ssrl_ros_go1/launch/: controller.launch  quadruped_comm.launch  support_nodes.launch  support_nodes_vicon.launch
ssrl_hardware/ssrl_ros_go1/scripts/: command_pub.py  controller.py  estimator.py  low_state_fake_pub.py  observer.py  plot_rollout.py  train.py  vicon_fake_pub.py
ssrl_hardware/ssrl_ros_go1/scripts/configs/: go1.yaml
ssrl_hardware/ssrl_ros_go1/src/: low_cmd_pub.cpp
ssrl_hardware/ssrl_ros_go1/src/pimbpo_ros_go1/: __init__.py  bag.py  controller.py  estimator.py  observer.py  plot_rollout.py
ssrl_hardware/ssrl_ros_go1_msgs/: CMakeLists.txt  package.xml
ssrl_hardware/ssrl_ros_go1_msgs/msg/: Action.msg  Estimation.msg  Gait.msg  Observation.msg  PdTarget.msg  QuadrupedCommand.msg  TorqueTarget.msg
