<?xml version="1.0"?>
<package format="2">
  <name>ssrl_ros_go1</name>
  <version>0.0.1</version>
  <description>The ssrl_ros_go1 package</description>
  <maintainer email="jake.levy@utexas.edu">Jacob Levy</maintainer>
  <license>BSD3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>

  <export>
  </export>
</package>
