<?xml version="1.0"?>

<package format="2">
  <name>ssrl_ros_go1_msgs</name>
  <version>0.0.0</version>
  <description>
    The ssrl_ros_go1_msgs package.
  </description>
  <maintainer email="jake.levy@utexas.edu">Jacob Levy</maintainer>
  <license>BSD3</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <depend>message_runtime</depend>
  <depend>message_generation</depend>
  <depend>std_msgs</depend>
  
</package>